--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="text/javascript"
+      strategy="beforeInteractive"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&autoload=false&libraries=services"
+    ></script>
   </body>
 </html>
